# neckar_wave_scripts2

./: .gitignore  .sops.yaml  AGENTS.md  Dockerfile  Dockerfile.fastapi  Dockerfile.qdrant  MITTWALD_DEBUGGING.md  README.md  Taskfile.yaml  Trinkgeld_output.xlsx  aaa.md  analysis.py  app.py  brot_rechnung.py  buchhaltung_auswertung.py  check_sumup_verrechnungen.py  create_forecast_charts.py  dump_roasts.py  fastapi_app.py  guv_analyse.py  guv_plots_presentation.py  logging.conf  mails_output.txt  prognose_input.csv  prognose_input.xlsx  pyproject.toml  schedule_export.csv  schichtplan.py  shopify_eval.py  streamlit_app.py  testapp qdrant.py  testapp.py  trinkgeld_verteilen.py  zinsen_plots.py
.streamlit/: config.toml
Archiv/: Brotmengen solawi sep.xlsx  analyse_revenues_articles.py  app 2.py  brotmengen_solawi Kopie.xlsx  brotmengen_solawi.xlsx  convert_amazon_report.py  mails_output.txt  read_schedule_analysis.py  schichtplan_deprecated.py  shopify_eval.py
Schichtplan/: Verfuegbarkeiten_August.csv  Verfuegbarkeiten_Juli.csv  both_locations.csv  schedule_ALT.csv  schedule_WIE.csv  schedule_export.csv  schichtplan_utils.py
Trinkgeld_Tabellen/: Trinkgelder_Verteilung Kopie.xlsx  Trinkgelder_Verteilung_April.xlsx  Trinkgelder_Verteilung_Februar.xlsx  Trinkgelder_Verteilung_Januar.xlsx  Trinkgelder_Verteilung_Juli.xlsx  Trinkgelder_Verteilung_Juni.xlsx  Trinkgelder_Verteilung_Mai.xlsx  Trinkgelder_Verteilung_März.xlsx  Trinkgelder_Verteilung_dezember.xlsx
amazon/: bestellungen_von_der_20241101_zu_20241130_20241206_1026.csv  output_file check.xlsx  output_file.xlsx  (+1 more)
(+381 files in other folders)
