[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pandas>=2.0.3",
    "openpyxl>=3.1.2",
    "seaborn>=0.13.0",
    "matplotlib>=3.10.3",
    "ace-tools>=0.0",
    "spacy>=3.8.4",
    "pip>=25.0",
    "python-dotenv>=1.1.0",
    "XlsxWriter>=3.2.3",
    "streamlit>=1.46.1",
]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "MIT"}

